--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7(900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^http[s]?:\/\/(www\.)?(?!(www\.))((\d{1,3}\.){3}\d{1,3}(:\d{2,5})?|([\w-]+\.?)+)(\/?)(([a-zA-Z0-9-]{1,}?\/?)*(#)?)?$" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^http[s]?:\/\/(www\.)?(?!(www\.))((\d{1,3}\.){3}\d{1,3}:?|([a-z-]+(\.|:))+)((?!:)\d{2,5})?(\/?)(([a-zA-Z0-9-]{1,}?\/?)*#?)?$" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
